--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="work-info">
                 <h3>11: computer programming</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="11_MVP/Thumbnail.jpg">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
