--- a/finalproject.html
+++ b/finalproject.html
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
-            <h2>Final Project: Arigeto Suminagashi Machine</h2>
+            <h2>Final Project: Arigeta Suminagashi Machine</h2>
           </div>
         </div>
       </div>
@@ -323,7 +323,7 @@
      <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="h2">Meet Arigeto: a Machine-Augmented Suminagashi Experience</h2>
+            <h2 class="h2">Meet Arigeta: a Machine-Augmented Suminagashi Experience</h2>
           </div>
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50"><br>
              <img src="finalproject/arigeta_web.jpg" alt="Image" class="img-fluid">
