--- a/finalproject.html
+++ b/finalproject.html
@@ -149,6 +149,7 @@
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="h3">Tools and techniques</h3>
             <li>3D design and printing</li>
+            <li>Laser cutting</li>
             <li>Microcontroller programmming (Arduino and ESP32)</li>
             <li>Electronic input and output</li>
              <li>Wireless networking (Firebase server)</li>
@@ -261,7 +262,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-3" data-aos="fade-up" data-aos-delay="100">
             <p>The vacuum formed container was a bit too flimsy so we decided to go with the acrylic box, which was water-tight after the weld dried. We used the mini acrylic box to help determine the height we wanted for the full sized one.</p>
-            <p>The box ended up fitting perfectly into the base that we milled out which was incredibly satisfying.
+            <p>We laser cutted two sheets of acrylic and bound them together using the acrylic weld. The box ended up fitting perfectly into the base that we milled out which was incredibly satisfying.
           </div>
           <div class="col-md-3" data-aos="fade-up" data-aos-delay="100">
              <img src="finalproject/test_brushheight.jpg" alt="Image" class="img-fluid">
