--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="150">
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="finalproject.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>final project</h3>
@@ -177,7 +177,7 @@
               <img class="img-fluid" src="10_machine/thumbnail.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="11_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>11: computer programming</h3>
@@ -185,12 +185,12 @@
               <img class="img-fluid" src="11_MVP/Thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>12: wildcard</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="12_wildcard/thumbnail.jpg">
             </a>
           </div>
         </div>
