--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </a>
           </div>
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="12_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>12: wildcard</h3>
               </div>
