--- a/12_index.html
+++ b/12_index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="col-md-1" data-aos="fade-up"></div>
           <div class="col-md-3" data-aos="fade-up">
-              <img src="12_wildcard/PCB.png" alt="Image" class="img-fluid">
+              <img src="12_wildcard/pcb.png" alt="Image" class="img-fluid">
               <figcaption>Simple PCB design for a blinking LED</figcaption>
           </div>
         </div>
